frontend/test/should_fail/computations_decl_use_calls_type_mismatch_proc_006.grg
using model_init;

proc(var d:double) : (double)
{
	return(d);
}

rule r
{
	modify {
		eval {
			def var d:double = 3.141592654;
			def var i:int;
			(i) = proc(d);
		}
	}
}
